--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ fastapi = "^0.111.0"
 streamlit = "^1.34.0"
 pydantic = "^2.7.1"
 pandas = "^2.2.2"
+python-dotenv = "^1.0.1"
 
 
 [tool.poetry.group.dev.dependencies]
