refactor: change .env variables for model app

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 MODEL_SERVICE_URL="http://localhost:8000"
 MODEL_PATH="data/model.pkl"
-MODEL_APP_CONTAINER_NAME="model-app"
-MODEL_APP_IMAGE_NAME="model-app"
+MODEL_APP_CONTAINER_NAME="model-app-container"
+MODEL_APP_IMAGE_NAME="model-app-image"
