--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,12 +14,15 @@ streamlit = "^1.34.0"
 pydantic = "^2.7.1"
 pandas = "^2.2.2"
 python-dotenv = "^1.0.1"
+plotly = "^5.22"
 
 
 [tool.poetry.group.dev.dependencies]
 isort = "^5.13.2"
 black = "^24.4.2"
 pylint = "^3.2.0"
+ipykernel = "^6.29"
+ipywidgets = "^8.1"
 
 [tool.black]
 line-length = 100
